@@ -1,3 +1,9 @@
+2003-01-17  Joe Shaw  <joe@ximian.com>
+
+	* libsoup/soup-ssl-proxy.c (soup_ssl_proxy_readwrite): It's not
+	uncommon for us to get a G_IO_ERROR_AGAIN when trying to write
+	out, so keep trying until we succeed.
+
 2003-01-10  Joe Shaw  <joe@ximian.com>
 
 	* libsoup/soup-openssl.c (verify_cb): Load some X509 and SSL error
